--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yuri Yakymiv",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "express-generator": "^4.2.0",
+    "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   }
 }
