--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "express-generator": "^4.2.0",
+    "mocha": "^10.0.0",
     "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   }
