--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tinydb": "^0.1.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "express-generator": "^4.2.0",
     "mocha": "^10.0.0",
     "prisma": "^4.4.0",
