--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-generator": "^4.2.0",
     "mocha": "^10.0.0",
     "prisma": "^4.4.0",
+    "supertest": "^6.3.0",
     "typescript": "^4.8.4"
   }
 }
