--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ParkingSpotDetector API Webserver",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
+    "test": "mocha --recursive --exit",
+    "start": "node src/index.js --run-local",
     "configure-dev": "./scripts/install_dev_env.sh",
     "drop-database": "./scripts/drop_database_table.sh"
   },
