--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "tinydb": "^0.1.0"
   },
   "devDependencies": {
