--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "lodash": "^4.17.21",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
+    "morgan": "^1.10.0",
     "tinydb": "^0.1.0"
   },
   "devDependencies": {
