--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "body-parser": "^1.20.1",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "express-sesssion": "^1.15.5",
     "lodash": "^4.17.21",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
