--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
     "tinydb": "^0.1.0"
   },
   "devDependencies": {
