--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.6.3",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "tinydb": "^0.1.0"
   },
   "devDependencies": {
