--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha --recursive --exit",
     "start": "node src/index.js --run-local",
+    "start-deb": "node inspect src/index.js --run-local",
     "configure-dev": "./scripts/install_dev_env.sh",
     "drop-database": "./scripts/drop_database_table.sh"
   },
