--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "aws-sdk": "^2.1233.0",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.3",
