--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
+    "aws-sdk": "^2.1233.0",
     "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
