--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "mocha --recursive --exit",
     "start": "node src/index.js --run-local",
     "start-deb": "node inspect src/index.js --run-local",
+    "frontend": "cd src/frontend && npm start",
+    "concurrent": "concurrently \"npm run start\" \"npm run frontend\"",
     "configure-dev": "./scripts/install_dev_env.sh",
     "drop-database": "./scripts/drop_database_table.sh"
   },
-  "engines": { "node" : "16.17.1" },
+  "engines": {
+    "node": "16.17.1"
+  },
   "author": "Yuri Yakymiv",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "aws-sdk": "^2.1233.0",
     "body-parser": "^1.20.1",
+    "concurrently": "^7.5.0",
     "connect-ensure-login": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
