--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Yuri Yakymiv",
   "license": "ISC",
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.4.0",
     "aws-sdk": "^2.1233.0",
     "body-parser": "^1.20.1",
@@ -36,8 +37,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "path": "^0.12.7",
+    "react-hook-form": "^7.39.3",
     "serve-favicon": "^2.5.0",
-    "tinydb": "^0.1.0"
+    "tinydb": "^0.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "chai": "^4.3.6",
