--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.4.0",
     "aws-sdk": "^2.1233.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "concurrently": "^7.5.0",
     "connect-ensure-login": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
