--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.4.0",
     "aws-sdk": "^2.1233.0",
+    "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "concurrently": "^7.5.0",
